[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 760.0
margin_bottom = 60.0
text = "Example application using a shared executable file: \"/usr/bin/godot353_shared\""
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 20.0
margin_top = 60.0
margin_right = 600.0
margin_bottom = 90.0
text = "user_data"
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 20.0
margin_top = 90.0
margin_right = 600.0
margin_bottom = 120.0
text = "work_dir"
valign = 1

[node name="Label4" type="Label" parent="."]
margin_left = 20.0
margin_top = 120.0
margin_right = 740.0
margin_bottom = 150.0
text = "work_dir_arg"
valign = 1

[node name="Label5" type="Label" parent="."]
margin_left = 20.0
margin_top = 150.0
margin_right = 740.0
margin_bottom = 180.0
text = "args"
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 600.0
margin_top = 65.0
margin_right = 740.0
margin_bottom = 85.0
text = "Open User data dir"

[node name="Button2" type="Button" parent="."]
margin_left = 600.0
margin_top = 95.0
margin_right = 740.0
margin_bottom = 115.0
text = "Open work dir"

[node name="Button3" type="Button" parent="."]
margin_left = 600.0
margin_top = 125.0
margin_right = 740.0
margin_bottom = 145.0
text = "Open arg work dir"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
